@startuml
'https://plantuml.com/sequence-diagram
left to right direction
skin rose

class Boleta{
-id: int
-fechaEmision: date
-pagaTotal: double
+Boleta(id: int, vehiculo: Vehiculo, mantenimiento: Mantenimiento, fechaEmision: date, pagaTotal: double)
+getId(): int
+getFechaEmision(): date
+getVehiculo(): Vehiculo
+getMantenimiento(): Mantenimiento
+getPagaTotal(): double
}


class IdVehiculo{
    -id: int
    +IdVehiculo(id: int)
    +getId(): int
}

class Mantenimiento{
    -idMantenimiento: int
    -fecha: String
    -tipoMantenimiento: String
    -descripcion: String
    +Mantenimiento( idMantenimiento: int, id: int , fecha: String , tipoMantenimiento: String , descripcion :String)
    +getIdMantenimiento(); int
    +getFecha(): String
    +getTipoMantenimiento(): String
    +getDescripcion(): String
}

interface Sistema{
+mensajeMenu(): void
+menu2(): void
+menu3(): void
+menu4(): void
+cargarMantenimientos(): void
+verVehiculos(): void
+buscarPorTipo(): void
+buscarPorId(): void
+mostrarHistorialVehiculo(): void
+agregarVehiculo(): void
+agregarMantenimiento(): void
+generarBoleta(): void
+verBoletas(): void
+salir(): void
}

class SistemaImpl{
+SistemaImpl()
+menu(): void
}
class Vehiculo{
-marca: String
-modelo: String
-anioFabricacion: int
-kilometraje: int
-tipoVehiculo: String
-atributo1: String
-atributo2: String
+Vehiculo((id: int, marca: String, modelo: String, anioFabricacion: int, kilometraje: int, tipoVehiculo: String, atributo1: String, atributo2: String)
+getMarca(): String
+getModelo(): String
+getAnioFabricacion(): int
+getKilometraje(): int
+getTipoVehiculo(): String
+getAtributo1(): String
+getAtributo2(): String

}

Vehiculo"1" --|>"1" IdVehiculo : -id: int
Mantenimiento"1" --|>"1" IdVehiculo: -id: int

SistemaImpl"1" ..|>"1" Sistema: implementa
Vehiculo"1" -->"1" SistemaImpl: -vehiculos: ArrayList<Vehiculo>
Mantenimiento"1" -->"1" SistemaImpl: -mantenimientos: ArrayList<Mantenimiento>

Boleta"1" <--"1" Vehiculo: -vehiculo: Vehiculo
Boleta"1" <--"1..*" Mantenimiento: -mantenimiento: Mantenimiento
Boleta "1" --> "1" SistemaImpl: -boletas: ArrayList<Boleta>


@enduml